@@ -4,6 +4,7 @@
  - add computation of Young's modulus and crosstalk correction
  - add user-defined fluorescence labels in QuickView
  - add legend to trace in QuickView
+ - populate metadata panel
 2.0.0a23
  - add more update functions to fix frozen macOS app
  - improve plot visualizations
